@@ -3,6 +3,7 @@
 	* e-shell-importer.c (import_druid_finish): now setup a window to
 	display importer progress, so it doesn't have to be copied for all
 	importers & they can all share it.
+	(import_druid_finish): fix the error id/prompt
 
 2005-07-01  Not Zed  <NotZed@Ximian.com>
 
